<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bStart"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_weight="2"
        android:text="@string/bIni"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tTiempo"
                style="@style/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tituloTiempo" />

                        <Chronometer
                android:id="@+id/chrono1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                                style="@style/resultado"
                 />
                        
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tDist"
                style="@style/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tDist" />

            <TextView
                android:id="@+id/rDist"
                style="@style/resultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>
        
    </LinearLayout>

    <TextView
        android:id="@+id/creditos"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/creditos"
        android:textColor="#777"
        android:textSize="10dp" />

</LinearLayout>